* configure.ac (CONF_SUBDIRS): Make these relative to tests/Makefile.am. (DIST_MAKEFILE_LIST): Adjust to compensate for having removed the `tests/' part in CONF_SUBDIRS. * tests/Makefile.am (DIST_SUBDIRS): Distribute these directories. (SUBDIRS): Set to `.', a NOP, to workaround an automake bug which ignores DIST_SUBDIRS unless SUBDIRS is also set. * Makefile.am (DIST_SUBDIRS): Don't try to distribute the tests subdirectories from here, since the recursive automake dist rule only works with direct child directories.  Defer to tests/Makefile.am in this case.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -73,6 +73,11 @@ TESTS_ENVIRONMENT = MAKE="$(MAKE)" CC="$(CC)" CFLAGS="$(CFLAGS)" \
 	OBJEXT="$(OBJEXT)" EXEEXT="$(EXEEXT)" FFLAGS="$(FFLAGS)"
 
 EXTRA_DIST = defs $(COMMON_TESTS) $(CXX_TESTS) $(F77_TESTS)
+DIST_SUBDIRS = $(CONF_SUBDIRS)
+
+# FIXME: Automake-1.7b (at least) only honours DIST_SUBDIRS if SUBDIRS is
+#        also set.  Remove this line when that bug is fixed.
+SUBDIRS = .
 
 # We need to remove any files that the above tests created.
 clean-local:
