* m4/libtool.m4 (AC_LIBTOOL_SETUP): Uncomment call to _LT_CONFIG_COMMANDS. (_LT_AC_TAG_CONFIG, AC_LIBTOOL_CONFIG): Accumulate tag generation for `config.status' using _LT_CONFIG_SAVE_COMMANDS.  Remove AC_MSG_NOTICE noise now that libtool is generated by a single config.status tag. * Makefile.am (libtool): Specify CONFIG_COMMANDS properly now that libtool is generated in one pass.

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,7 +44,7 @@ bin_SCRIPTS = libtool libtoolize
 config_status = $(top_builddir)/config.status
 
 libtool: config/ltmain.sh $(top_builddir)/configure
-	CONFIG_FILES= CONFIG_HEADERS= $(SHELL) $(config_status)
+	CONFIG_FILES= CONFIG_HEADERS= CONFIG_COMMANDS=$@ $(SHELL) $(config_status)
 	chmod +x $@
 
 libtoolize: $(srcdir)/libtoolize.in $(top_builddir)/config.status
