--- a/Makefile.am
+++ b/Makefile.am
@@ -50,6 +50,9 @@ libtoolize: $(srcdir)/libtoolize.in $(top_builddir)/config.status
 	CONFIG_FILES=$@ CONFIG_HEADERS= CONFIG_COMMANDS= $(SHELL) $(config_status)
 	chmod +x $@
 
+# Make sure ltmain.sh is regenerated when the version timestamp changes
+config/ltmain.sh: ChangeLog
+
 .PHONY: configure-subdirs
 configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
 @DIST_MAKEFILE_LIST@:
