* Makefile.am (config/ltmain.sh): Removed.  Rebuilding ltmain.sh isn't enough, because the TIMESTAMP in config.status is still out of date. (config.status): We actually need a new config.status to force the correct timestamp into ltmain.sh.

--- a/Makefile.am
+++ b/Makefile.am
@@ -50,8 +50,8 @@ libtoolize: $(srcdir)/libtoolize.in $(top_builddir)/config.status
 	CONFIG_FILES=$@ CONFIG_HEADERS= CONFIG_COMMANDS= $(SHELL) $(config_status)
 	chmod +x $@
 
-# Make sure ltmain.sh is regenerated when the version timestamp changes
-config/ltmain.sh: ChangeLog
+# Make sure configure is regenerated when the version timestamp changes
+config.status: ChangeLog
 
 .PHONY: configure-subdirs
 configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
