* Makefile.am (config.status): Removed.  Rebuilding config.status isn't enough, because the TIMESTAMP in configure is still out of date. (configure): We actually need a new configure to force the correct timestamp into ltmain.sh.

--- a/Makefile.am
+++ b/Makefile.am
@@ -51,7 +51,7 @@ libtoolize: $(srcdir)/libtoolize.in $(top_builddir)/config.status
 	chmod +x $@
 
 # Make sure configure is regenerated when the version timestamp changes
-config.status: ChangeLog
+configure: ChangeLog
 
 .PHONY: configure-subdirs
 configure-subdirs distdir: $(DIST_MAKEFILE_LIST)
