* config/mkstamp: Change output format to ` $rev $date'. * configure.ac: Make the banner more like suggestions in http://www.gnu.org/prep/standards_toc.html Section 4.6. * libtoolize.in: Make --version output conform to the GNU standard. * ltmain.in: Ditto. And tweak the generated file headers to match.

--- a/configure.ac
+++ b/configure.ac
@@ -96,7 +96,7 @@ TIMESTAMP=
 case $LT_ALPHA in
   [[acegikmoqsuwy]])
     TIMESTAMP=`${CONFIG_SHELL} ${ac_aux_dir}/mkstamp < ${srcdir}/ChangeLog`
-    AS_BOX([Configuring AC_PACKAGE_TARNAME AC_PACKAGE_VERSION$TIMESTAMP])
+    AS_BOX([Configuring AC_PACKAGE_TARNAME (Build:$TIMESTAMP) AC_PACKAGE_VERSION])
     echo
     ;;
 esac
