Okay, the problem I am trying to solve is that when a change (say, bumping the version to 1.6 for the next release) is committed, the timestamp in ChangeLog is updated, but ltmain.sh and libtoolize inherit the pre-commit build number from config.status.  This delta notes the change in build number in the unstamped ChangeLog and forces a rerun of configure etc. to roll a new ltmain.sh with the correct TIMESTAMP:
* Makefile.am (stamp-vcl): We actually need a new config.status to
force the correct timestamp into libtoolize and ltmain.sh,
rerunning autoconf has no effect at all if configure.ac hasn't
changed.

--- a/Makefile.am
+++ b/Makefile.am
@@ -50,9 +50,9 @@ libtoolize: $(srcdir)/libtoolize.in $(top_builddir)/config.status
 	CONFIG_FILES=$@ CONFIG_HEADERS= CONFIG_COMMANDS= $(SHELL) $(config_status)
 	chmod +x $@
 
-# Make sure configure is regenerated when the version timestamp changes
-$(top_builddir)/config.status: stamp-vcl $(top_srcdir)/ChangeLog
-stamp-vcl: vcl.tmp
+# Make sure config.status is regenerated when the version timestamp changes
+$(config_status): stamp-vcl
+stamp-vcl: vcl.tmp $(top_srcdir)/ChangeLog
 vcl.tmp:
 	@set `$(SHELL) config/mkstamp < $(top_srcdir)/ChangeLog`; \
 	echo "$$1" > vcl.tmp
