* m4/lt~obsolete.m4: Add a file containing aclocal-fooling macro definitions which stop the contents of an installed libtool.m4 ending up in our aclocal.m4 when we bootstrap. * Makefile.am (pkgmacro_DATA): Note that we don't need to add lt~obsolete.m4 to this list.
* m4/libtool.m4 (_LT_COPYING): Factor out copyright message so it

--- a/Makefile.am
+++ b/Makefile.am
@@ -33,6 +33,7 @@ pkgdata_SCRIPTS = config/config.guess config/config.sub
 pkgdata_DATA = config/ltmain.sh
 
 # Me maintain our own macros to provent problems with ancient definitions.
+# lt~obsolete.m4 doesn't belong here, it's for bootstrapping us only
 pkgmacrodir = $(pkgdatadir)/m4
 pkgmacro_DATA = m4/libtool.m4 m4/ltdl.m4 m4/ltsugar.m4
 
