* configure.ac (AC_CONFIG_HEADERS): Create config.h in $top_srcdir. * m4/ltdl.m4 (AC_LIB_LTDL): Run AC_CONFIG_HEADERS for the user if necessary. Calculate filename from first argument to AC_CONFIG_HEADERS, and substitute as CONFIG_H. * libltdl/Makefile.am (AM_CPPFLAGS): Make sure we are searching in $top_srcdir for headers. (DEFS): Override the default HAVE_CONFIG_H with the config.h filename. (ltdl.lo): Reference config.h via $(CONFIG_H). * libltdl/ltdl.c (HAVE_CONFIG_H): Ditto.

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -2,6 +2,8 @@
 
 AUTOMAKE_OPTIONS = no-dependencies foreign
 ACLOCAL_AMFLAGS  = -I ../m4
+AM_CPPFLAGS = -I$(top_srcdir)
+DEFS = -DHAVE_CONFIG_H="<$(CONFIG_H)>"
 
 if INSTALL_LTDL
 include_HEADERS = ltdl.h
@@ -26,7 +28,7 @@ libltdlc_la_SOURCES = ltdl.c
 libltdlc_la_LIBADD = $(LIBADD_DL)
 
 ## Because we do not have automatic dependency tracking:
-ltdl.lo: ltdl.h config.h
+ltdl.lo: ltdl.h $(top_srcdir)/$(CONFIG_H)
 
 ## This allows us to install libltdl without using ln and without creating
 ## a world writeable directory.
